Calculators for all pieces implemented